Fix resilience padding: Mindful excercises too small

--- a/components/ResilienceResource/MindfulnessExercises.module.css
+++ b/components/ResilienceResource/MindfulnessExercises.module.css
@@ -1,6 +1,5 @@
 .MindfulnessExercises {
   display: flex;
-  padding: 0 100px;
   flex-direction: column;
   align-items: center;
 }
